--- a/src/views/admin/movie.ejs
+++ b/src/views/admin/movie.ejs
@@ -27,7 +27,7 @@
 				<div class="card-body">
 					Director: <%= movie.director.name %>
 					<br />
-					Rating: <%= movie.rating %>
+					Rating: <%= movie.avgRating.value %>
 				</div>
 			</div>
 		</div>
