--- a/src/views/partials/headerHome.ejs
+++ b/src/views/partials/headerHome.ejs
@@ -20,7 +20,7 @@
 		<li class="nav-item dropdown">
 			<a class=" header-nav-item nav-link dropdown-toggle" data-bs-toggle="dropdown">All</a>
 			<ul class="dropdown-menu">
-			  <li><a class="dropdown-item" href="/api/user/movie/top">Top Movies</a></li>
+			  <li><a class="dropdown-item" href="/api/user/movie/top/1">Top Movies</a></li>
 			  <li><hr class="dropdown-divider"></li>
 			  <li><a class="dropdown-item" href="/api/user/actor/all">Actors</a></li>
 			  <li><a class="dropdown-item" href="/api/user/director/all">Directors</a></li>
