--- a/src/views/users/showMovie.ejs
+++ b/src/views/users/showMovie.ejs
@@ -33,7 +33,7 @@
           </tr>
           <tr>
              <td class="table-cell-alt"><div class="movie-details-label">Rating</div></td>
-             <td class="table-cell"><div><%= details.rating %></div></td>
+             <td class="table-cell"><div><%= details.avgRating.value %></div></td>
           </tr>
        </table>
     </div>
