--- a/src/views/users/home.ejs
+++ b/src/views/users/home.ejs
@@ -25,7 +25,7 @@
 					<div class="card-body">
 						Director: <%= movie.director.name %>
 						<br />
-						Rating: <%= movie.rating %>
+						Rating: <%= movie.avgRating.value %>
 					</div>
 				</div>
 			</div>
