--- a/src/views/users/topMovie.ejs
+++ b/src/views/users/topMovie.ejs
@@ -9,22 +9,42 @@
             </tr>
         </thead>
         <tbody class="top-movie-body">
-            <% for(let i=0; i<7; i++) { %>
+            <% for(let i=0; i<details.length; i++) {%>
             <tr>
                 <td class="table-cell-top">
-                    <%= i %>
+                    <%= (pageNo-1)*10+(i+1) %>
                 </td>
                 <td class="table-cell-top">
-                    <img class="movie-cover-small-alt topMovie-img" src="https://worldwideinterweb.com/wp-content/uploads/2017/10/baby-face-funny.jpg">
+                    <img class="movie-cover-small-alt topMovie-img" src="/api/images/<%= details[i].coverImage %>">
                 </td>
                 <td class="table-cell-top">
-                        Dark Knight
+                        <%= details[i].title %>
                 </td>
                 <td class="table-cell-top">
-                    5
+                     <%= details[i].avgRating.value %>
                 </td>
             </tr>
             <% } %>
         </tbody>
     </table>
 </div>
+
+<div class="mt-5 d-flex justify-content-center">
+    <nav aria-label="Page navigation example">
+        <ul class="pagination">
+          <li class="page-item">
+            <a style="background-color: rgb(41, 129, 180)" class="page-link" href="/api/user/movie/top/1" aria-label="Previous">
+              <span style="color: white" aria-hidden="true">&laquo;</span>
+            </a>
+          </li>
+          <% for(let i=1; i <= pageCount; i++) { %>
+            <li class="page-item"><a style="background-color: aliceblue;" class="page-link" href="/api/user/movie/top/<%= i %>"><%= i %></a></li>
+          <% } %>
+            <a style="background-color: rgb(41, 129, 180)" class="page-link" href="/api/user/movie/top/<%= pageCount %>" aria-label="Next">
+              <span style="color: white" aria-hidden="true">&raquo;</span>
+            </a>
+          </li>
+        </ul>
+    </nav>
+</div>
+
