Integration: best movies

--- a/src/views/admin/actor.ejs
+++ b/src/views/admin/actor.ejs
@@ -26,7 +26,8 @@
 			<div class="collapse text-primary mt-3" id="collapse<%= actor.id %>">
 				<div class="card-body">
 					Age: <%= actor.age %>
-					<!-- Best Movie: Best Movie -->
+					<br>
+					Best Movie: <%= actor.bestMovie %>
 				</div>
 			</div>
 		</div>
