--- a/src/views/admin/director.ejs
+++ b/src/views/admin/director.ejs
@@ -27,7 +27,7 @@
 				<div class="card-body">
 					Best Movie: <%= director.bestMovie %>
 					<br />
-					Favourite Genre: <%= director.favouriteGenre %>
+					Movies: <%= director.movies.length %>
 				</div>
 			</div>
 		</div>
