--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -24,5 +24,11 @@
 	</nav>
 </div>
 
+<button class="logout-button btn" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown"href=""><i class="fas fa-ellipsis-v"></i></button>
+
+<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+    <li class="dropdown-item disabled">Hello There</li>
+    <li><a class="dropdown-item" href="/auth/logout">Logout</a></li>
+</ul>
 
 
