Removed Fav Genre

--- a/src/views/users/showDirector.ejs
+++ b/src/views/users/showDirector.ejs
@@ -20,8 +20,8 @@
              <td  class="table-cell"><div><%= details.name %></div></td>
           </tr>
           <tr>
-             <td class="table-cell-alt"><div class="movie-details-label">Favourite Genre</div></td>
-             <td class="table-cell"><div><%= details.favouriteGenre %></div></td>
+             <td class="table-cell-alt"><div class="movie-details-label">Movie Count</div></td>
+             <td class="table-cell"><div><%= details.movies.length %></div></td>
  
           </tr>
           <tr>
