--- a/src/views/partials/headerHome.ejs
+++ b/src/views/partials/headerHome.ejs
@@ -1,7 +1,7 @@
 <div class="header-nav mt-5 mb-5 d-flex flex-wrap justify-content-between align-items-center">
 	<h1>Movie Logger</h1>
 	<div class="box-container">
-		<form method="GET" class="form-header">
+		<form action="/api/user/search/" method="GET" class="form-header">
 			<button type="submit">
 				<i class="fas fa-search"></i>
 			</button>
