--- a/src/views/users/showMovie.ejs
+++ b/src/views/users/showMovie.ejs
@@ -66,7 +66,7 @@
     </div>
     <div>
        <h2>Director</h2>
-       <a href="/api/user/director/<%= details.director.id %>"><img class="mt-4 movie-cover" src="/api/images/<%= details.director.coverImage %>"></a>
+       <a href="/api/user/director/show/<%= details.director.id %>"><img class="mt-4 movie-cover" src="/api/images/<%= details.director.coverImage %>"></a>
     </div>
  </div>
  <hr class="mt-5 mb-5">
